--- a/frontend/src/main/webapp/css/card.css
+++ b/frontend/src/main/webapp/css/card.css
@@ -5,17 +5,18 @@
 }
 
 .card {
-    width: 300px;
-    padding: 20px;
+    width: 200px;
+    padding: 10px;
     margin: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
     background-color: #f9f9f9;
+    cursor: pointer;
 }
 
 .card h2 {
     font-size: 20px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     text-align: center;
 }
 
@@ -29,7 +30,7 @@
 
 .card description {
     width: 100%;
-    height: 50px;
+    height: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -41,7 +42,7 @@
 
 .card .image-container {
     width: 100%;
-    height: 200px;
+    height: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
